# Ferrisbase

./: .env.example  .gitignore  Cargo.toml  Justfile  NAVBAR_AUTH.md  NAVBAR_QUICKSTART.md  README.md  TEST_USERS.md  setup-db.sh
backend/: AUTHENTICATION_SETUP.md  BACKEND_AUTH_SUMMARY.md  Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
backend/src/handlers/: auth.rs  dynamic_api.rs  mod.rs  projects.rs  tables.rs
backend/src/middleware/: auth.rs
backend/src/services/: auth_service.rs  dynamic_api_service.rs  mod.rs  project_service.rs  table_service.rs
database/: Cargo.toml
database/migration/src/: lib.rs  m001_create_contact_form.rs  m002_create_users_table.rs  m003_create_projects_table.rs  m004_create_project_tables.rs  main.rs
database/src/entities/: contacts.rs  mod.rs  prelude.rs  project_columns.rs  project_tables.rs  projects.rs  sea_orm_active_enums.rs  users.rs
docs/: DYNAMIC_API.md
frontend/: Cargo.toml  tailwind.css
frontend/assets/: tailwind.css
frontend/src/: auth.rs  config.rs  main.rs  routes.rs
frontend/src/components/: auth_test.rs  mod.rs  notification.rs
frontend/src/components/layout/: footer.rs  mod.rs  navbar.rs  project_layout.rs  protected_layout.rs  signed_in_layout.rs  signed_in_navbar.rs  unprotected_layout.rs
frontend/src/components/projects/: create_new_project.rs  mod.rs  project_card.rs  project_left_sidebar.rs  statistic_card.rs
frontend/src/hooks/: mod.rs  use_auth.rs  use_projects.rs  use_sql.rs  use_tables.rs
frontend/src/views/: blog.rs  faq.rs  home.rs  mod.rs  not_found.rs  privacy_policy.rs  projects.rs  terms_of_service.rs  user_settings.rs
frontend/src/views/auth/: login.rs  mod.rs  register.rs  reset_password.rs
frontend/src/views/projects/: api_documentation.rs  authentication.rs  database.rs  logs.rs  mod.rs  new_project.rs  project_by_id.rs  project_settings.rs  projects.rs  reports.rs  sql_editor.rs  table_editor.rs  table_editor_old.rs
shared/: Cargo.toml
shared/src/models/: auth.rs  mod.rs  project.rs  sql.rs  table.rs
src/: basic_http.rs
src/authentication/: auth.rs
