[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.7"
axum-server = "0.7.3"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tokio = { version = "1.48.0", features = ["full"] }

# Database
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Authentication & Security
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment & Configuration
dotenvy = "0.15.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Local dependencies
database = { path = "../database" }
shared = { path = "../shared" }
migration = { path = "../database/migration" }
