[package]
name = "frontend"
version = "0.1.0"
authors = ["RayburnCode <rayburncode@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4",    "js",] }
web-sys = { version = "0.3.83", features = ["Window", "Storage"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
